TheProject/manifests/theproject-stripprefix-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: theproject-stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /theproject
