TheProject/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: theproject 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: theproject
  template:
    metadata:
      labels:
        app: theproject
    spec:
      containers:
        - name: theproject
          image: alago0/theproject:23-6-2025
