TheProject/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: theproject-svc
  namespace: project
spec:
  type: ClusterIP 
  selector:
    app: theproject
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 80
